# quickmcl

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  package.xml  rosdoc.yaml
.circleci/: config.yml
cfg/: QuickMCL.cfg
doc/: namespaces.dox  using.md
filters/: cloud_config.yaml  laser_config.yaml
include/quickmcl/: config.h  distance_calculator.h  i_particle_filter.h  laser.h  low_pass_filter.h  map.h  map_base.h  map_factory.h  map_likelihood.h  map_state.h  map_types.h  odometry.h  parameters.h  particle.h  particle_filter.h  particle_filter_factory.h  pose_2d.h  pose_restore.h  random.h  scaled_map.h  space_partitioning.h  statistics.h  timer.h  utils.h
include/quickmcl_node/: commands.h  covariance_mappings.h  laser_handler.h  main.h  parameter_manager.h  publishing.h  tf_reader.h
launch/: laser_filter.launch  localiser.launch
src/quickmcl/: distance_calculator.cpp  laser.cpp  map_base.cpp  map_factory.cpp  map_likelihood.cpp  odometry.cpp  parameters.cpp  particle.cpp  particle_filter.cpp  particle_filter_factory.cpp  pose_2d.cpp  pose_restore.cpp  space_partitioning.cpp  statistics.cpp  timer.cpp
src/quickmcl_node/: commands.cpp  laser_handler.cpp  main.cpp  parameter_manager.cpp  publishing.cpp  tf_reader.cpp
test/: test_main.cpp
test/quickmcl/: test_distance_calculator.cpp  test_low_pass_filter.cpp  test_particle.cpp  test_pose_2d.cpp  test_scaled_map.cpp  test_statistics.cpp  test_utils.cpp
