<?xml version="1.0"?>
<package format="2">
  <name>quickmcl</name>
  <version>0.5.0</version>
  <description>QuickMCL - Quick 2D Monte Carlo Localisation</description>

  <maintainer email="VorpalBlade@users.noreply.github.com">Arvid Norlander</maintainer>
  <author email="VorpalBlade@users.noreply.github.com">Arvid Norlander</author>
  <license>GPLv3</license>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <depend>geometry_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <test_depend>libgmock-dev</test_depend>
  <test_depend>gtest</test_depend>
  <test_depend>rosunit</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
